; ModuleID = '/home/carl/AnghaBench/redis/src/extr_listpack.c_lpLast.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_listpack.c_lpLast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lpLast(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @lpGetTotalBytes(i8* %5)
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i8, i8* %4, i64 %7
  %9 = getelementptr inbounds i8, i8* %8, i64 -1
  store i8* %9, i8** %3, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @lpPrev(i8* %10, i8* %11)
  ret i8* %12
}

declare dso_local i32 @lpGetTotalBytes(i8*) #1

declare dso_local i8* @lpPrev(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
